@@ -45,6 +45,14 @@ Changes Since 0.19
   - `Transformer.populate_from_components()` now silently ignores
     components that are not instances of `docutils.TransformSpec`.
 
+* docutils/transforms/frontmatter.py
+
+  - `DocInfo` now accepts author names with initial like "A. Einstein"
+    (that are `parsed as enumerated list`__) in "author" fields
+    instead of rising an error.
+
+    __ docs/ref/rst/restructuredtext.html#enumerated-lists
+
 * docutils/transforms/references.py
 
   - Ignore `citation_reference` nodes if the "use_bibex" setting is
